2005-03-23  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/pr18025.f90: New test.

2005-03-23  Mark Mitchell  <mark@codesourcery.com>

	* g++.old-deja/g++.warn/compare1.C: Run with -Wno-deprecated.

2005-03-22  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/g77_intrinsics_funcs.f: New test.
	* gfortran.dg/g77_intrinsics_sub.f: New test.

2005-03-22  Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/opt/max1.C: Run with -Wno-deprecated.
	* g++.dg/opt/pr7503-2.C: Likewise.
	* g++.dg/opt/pr7503-3.C: Likewise.
	* g++.dg/opt/pr7503-4.C: Likewise.
	* g++.dg/opt/pr7503-5.C: Likewise.
	* g++.dg/warn/minmax.C: New test.

2005-03-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/19980
	* g++.dg/template/redecl3.C: New test.

2005-03-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/20499
	* g++.dg/parse/error16.C: Tweak error markers.

2005-03-22  Jakub Jelinek  <jakub@redhat.com>

	PR target/20561
	* gcc.dg/20050321-2.c: New test.

2005-03-22  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20465
	PR c++/20381
	* g++.dg/template/ptrmem12.C: New.

2005-03-22  Paolo Carlini  <pcarlini@suse.de>

	PR c++/20461
	* g++.dg/parse/crash24.C: New test.

	PR c++/20536
	* g++.dg/parse/crash25.C: New test.

2005-03-22  Paolo Carlini  <pcarlini@suse.de>

	PR c++/20463
	* g++.dg/template/crash35.C: New test.

2005-03-21  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/20539
	* gcc.c-torture/compile/pr13066-1.c: New test case.
	* gcc.c-torture/compile/pr20539-1.c: Likewise.
	* g++.dg/opt/pr13066-1.C: Likewise.

2005-03-21  Paolo Carlini  <pcarlini@suse.de>

	PR c++/20147	
	* g++.dg/ext/stmtexpr4.C: New test.

2005-03-20  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/bitfld-14.c, gcc.dg/enum3.c: New tests.

2005-03-19  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/18525
	* gfortran.dg/nesting_1.f90: New test.

2005-03-19  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/20240