@@ -1,3 +1,9 @@
+2005-03-25  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	PR libfortran/15332
+	* io/format.c (parse_format_list): format node for colon edit
+	descriptor needs a repeat counter set to 1.
+	
 2005-02-24  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 	* Makefile.in, config.h.in: Regenerate.
 
