@@ -1,3 +1,8 @@
+2005-03-25  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	PR libfortran/15332
+	* gfortran.dg/pr15332.f: New test.
+
 2005-03-23  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	* gfortran.dg/pr18025.f90: New test.
